[workspace]
members = [
    "account-decoder",
    "account-decoder-client-types",
    "accounts-bench",
    "accounts-cluster-bench",
    "accounts-db",
    "accounts-db/accounts-hash-cache-tool",
    "accounts-db/store-histogram",
    "accounts-db/store-tool",
    "banking-bench",
    "banking-stage-ingress-types",
    "banks-client",
    "banks-interface",
    "banks-server",
    "bench-streamer",
    "bench-tps",
    "bench-vote",
    "bloom",
    "bucket_map",
    "builtins",
    "builtins-default-costs",
    "cargo-registry",
    "clap-utils",
    "clap-v3-utils",
    "cli",
    "cli-config",
    "cli-output",
    "client",
    "client-test",
    "compute-budget",
    "compute-budget-instruction",
    "connection-cache",
    "core",
    "cost-model",
    "curves/curve25519",
    "dos",
    "download-utils",
    "entry",
    "faucet",
    "feature-set",
    "fee",
    "genesis",
    "genesis-utils",
    "geyser-plugin-interface",
    "geyser-plugin-manager",
    "gossip",
    "install",
    "io-uring",
    "keygen",
    "lattice-hash",
    "ledger",
    "ledger-tool",
    "local-cluster",
    "log-analyzer",
    "log-collector",
    "measure",
    "memory-management",
    "merkle-tree",
    "metrics",
    "net-shaper",
    "net-utils",
    "notifier",
    "perf",
    "platform-tools-sdk/cargo-build-sbf",
    "platform-tools-sdk/cargo-test-sbf",
    "platform-tools-sdk/gen-headers",
    "poh",
    "poh-bench",
    "poseidon",
    "precompiles",
    "program-runtime",
    "program-test",
    "programs/bpf-loader-tests",
    "programs/bpf_loader",
    "programs/bpf_loader/gen-syscall-list",
    "programs/compute-budget",
    "programs/compute-budget-bench",
    "programs/ed25519-tests",
    "programs/loader-v4",
    "programs/stake",
    "programs/stake-tests",
    "programs/system",
    "programs/vote",
    "programs/zk-elgamal-proof",
    "programs/zk-elgamal-proof-tests",
    "programs/zk-token-proof",
    "pubsub-client",
    "quic-client",
    "rayon-threadlimit",
    "rbpf-cli",
    "remote-wallet",
    "reserved-account-keys",
    "rpc",
    "rpc-client",
    "rpc-client-api",
    "rpc-client-nonce-utils",
    "rpc-client-types",
    "rpc-test",
    "runtime",
    "runtime-transaction",
    "send-transaction-service",
    "stake-accounts",
    "storage-bigtable",
    "storage-bigtable/build-proto",
    "storage-proto",
    "streamer",
    "svm",
    "svm-callback",
    "svm-conformance",
    "svm-feature-set",
    "svm-rent-collector",
    "svm-transaction",
    "test-validator",
    "thin-client",
    "thread-manager",
    "timings",
    "tls-utils",
    "tokens",
    "tps-client",
    "tpu-client",
    "tpu-client-next",
    "transaction-context",
    "transaction-dos",
    "transaction-metrics-tracker",
    "transaction-status",
    "transaction-status-client-types",
    "transaction-view",
    "turbine",
    "type-overrides",
    "udp-client",
    "unified-scheduler-logic",
    "unified-scheduler-pool",
    "upload-perf",
    "validator",
    "version",
    "vortexor",
    "vote",
    "watchtower",
    "wen-restart",
    "xdp",
    "zk-keygen",
    "zk-sdk",
    "zk-token-sdk",
]

exclude = ["programs/sbf", "svm/examples", "svm/tests/example-programs"]

resolver = "2"

[workspace.package]
version = "3.0.0"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/anza-xyz/agave"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("gorbagana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]

# Clippy lint configuration that can not be applied in clippy.toml
[workspace.lints.clippy]
arithmetic_side_effects = "deny"
default_trait_access = "deny"
manual_let_else = "deny"
used_underscore_binding = "deny"

[workspace.dependencies]
Inflector = "0.11.4"
aes-gcm-siv = "0.11.1"
agave-banking-stage-ingress-types = { path = "banking-stage-ingress-types", version = "=3.0.0" }
agave-cargo-registry = { path = "cargo-registry", version = "=3.0.0" }
agave-feature-set = { path = "feature-set", version = "=3.0.0" }
agave-geyser-plugin-interface = { path = "geyser-plugin-interface", version = "=3.0.0" }
agave-io-uring = { path = "io-uring", version = "=3.0.0" }
agave-precompiles = { path = "precompiles", version = "=3.0.0" }
agave-reserved-account-keys = { path = "reserved-account-keys", version = "=3.0.0" }
agave-thread-manager = { path = "thread-manager", version = "=3.0.0" }
agave-transaction-view = { path = "transaction-view", version = "=3.0.0" }
agave-xdp = { path = "xdp", version = "=3.0.0" }
ahash = "0.8.11"
anyhow = "1.0.98"
aquamarine = "0.6.0"
arbitrary = "1.4.1"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
array-bytes = "=1.4.1"
arrayref = "0.3.9"
arrayvec = "0.7.6"
assert_cmd = "2.0"
assert_matches = "1.5.0"
async-channel = "1.9.0"
async-lock = "3.4.0"
async-trait = "0.1.88"
atty = "0.2.11"
axum = "0.7.9"
aya = "0.13"
backoff = "0.4.0"
base64 = "0.22.1"
bincode = "1.3.3"
bitflags = { version = "2.9.1" }
blake3 = "1.8.2"
borsh = { version = "1.5.7", features = ["derive", "unstable__schema"] }
borsh0-10 = { package = "borsh", version = "0.10.3" }
bs58 = { version = "0.5.1", default-features = false }
bv = "0.11.1"
byte-unit = "4.0.19"
bytemuck = "1.23.1"
bytemuck_derive = "1.9.3"
bytes = "1.10"
bzip2 = "0.4.4"
caps = "0.5.5"
cargo_metadata = "0.15.4"
cfg-if = "1.0.1"
cfg_eval = "0.1.2"
chrono = { version = "0.4.41", default-features = false }
chrono-humanize = "0.2.3"
clap = "2.33.1"
# Remove this dependency when procedural macros will support non-inline modules.
conditional-mod = "0.1.0"
console = "0.15.11"
console_error_panic_hook = "0.1.7"
console_log = "0.2.2"
const_format = "0.2.34"
core_affinity = "0.5.10"
criterion = "0.5.1"
criterion-stats = "0.3.0"
crossbeam-channel = "0.5.15"
csv = "1.3.1"
ctrlc = "3.4.7"
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core"] }
dashmap = "5.5.3"
derivation-path = { version = "0.2.0", default-features = false }
derive-where = "1.5.0"
derive_more = { version = "1.0.0", features = ["full"] }
dialoguer = "0.10.4"
digest = "0.10.7"
dir-diff = "0.3.3"
dirs-next = "2.0.0"
dlopen2 = "0.5.0"
dyn-clone = "1.0.19"
eager = "0.1.0"
ed25519-dalek = "=1.0.1"
ed25519-dalek-bip32 = "0.2.0"
enum-iterator = "1.5.0"
env_logger = "0.9.3"
etcd-client = "0.11.1"
fast-math = "0.1"
fd-lock = "3.0.13"
five8_const = "0.1.4"
flate2 = "1.0.31"
fnv = "1.0.7"
fs_extra = "1.3.0"
futures = "0.3.31"
futures-util = "0.3.29"
gag = "1.0.0"
gethostname = "0.2.3"
getrandom = "0.3.3"
goauth = "0.13.1"
governor = "0.6.3"
hex = "0.4.3"
hidapi = { version = "2.6.3", default-features = false }
histogram = "0.6.9"
hmac = "0.12.1"
http = "0.2.12"
humantime = "2.2.0"
hyper = "0.14.32"
hyper-proxy = "0.9.1"
im = "15.1.0"
indexmap = "2.9.0"
indicatif = "0.17.11"
io-uring = "0.7.4"
itertools = "0.12.1"
jemallocator = { package = "tikv-jemallocator", version = "0.6.0", features = [
    "unprefixed_malloc_on_supported_platforms",
] }
js-sys = "0.3.77"
json5 = "0.4.1"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
lazy-lru = "0.1.3"
libc = "0.2.174"
libloading = "0.7.4"
libsecp256k1 = { version = "0.6.0", default-features = false, features = [
    "std",
    "static-context",
] }
light-poseidon = "0.2.0"
log = "0.4.27"
lru = "0.7.7"
lz4 = "1.28.1"
memmap2 = "0.9.5"
memoffset = "0.9"
merlin = { version = "3", default-features = false }
min-max-heap = "1.3.0"
mockall = "0.11.4"
modular-bitfield = "0.11.2"
nix = "0.30.1"
num-bigint = "0.4.6"
num-derive = "0.4"
num-traits = "0.2"
num_cpus = "1.17.0"
num_enum = "0.7.3"
openssl = "0.10"
parking_lot = "0.12"
pbkdf2 = { version = "0.11.0", default-features = false }
pem = "1.1.1"
percentage = "0.1.0"
pickledb = { version = "0.5.1", default-features = false }
predicates = "2.1"
pretty-hex = "0.3.0"
prio-graph = "0.3.0"
proc-macro2 = "1.0.95"
proptest = "1.7"
prost = "0.11.9"
prost-build = "0.11.9"
prost-types = "0.11.9"
protobuf-src = "1.1.0"
qstring = "0.7.2"
qualifier_attr = { version = "0.2.2", default-features = false }
quinn = "0.11.8"
quinn-proto = "0.11.12"
quote = "1.0"
rand = "0.8.5"
rand0-7 = { package = "rand", version = "0.7" }
rand_chacha = "0.3.1"
rand_chacha0-2 = { package = "rand_chacha", version = "0.2.2" }
rayon = "1.10.0"
reed-solomon-erasure = "6.0.0"
regex = "1.11.1"
reqwest = { version = "0.12.20", default-features = false }
reqwest-middleware = "0.4.2"
rolling-file = "0.2.0"
rpassword = "7.4"
rustls = { version = "0.23.28", features = ["std"], default-features = false }
scopeguard = "1.2.0"
semver = "1.0.26"
seqlock = "0.2.0"
serde = "1.0.219" # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde-big-array = "0.5.1"
serde_bytes = "0.11.17"
serde_derive = "1.0.219" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = "1.0.140"
serde_with = { version = "3.13.0", default-features = false }
serde_yaml = "0.9.34"
serial_test = "2.0.0"
sha2 = "0.10.9"
sha3 = "0.10.8"
shuttle = "0.7.1"
signal-hook = "0.3.18"
siphasher = "1.0.1"
slab = "0.4.9"
smallvec = "1.15.1"
smpl_jwt = "0.7.1"
socket2 = "0.5.10"
soketto = "0.7"
gorbagana-account = "2.2.1"
gorbagana-account-decoder = { path = "account-decoder", version = "=3.0.0" }
gorbagana-account-decoder-client-types = { path = "account-decoder-client-types", version = "=3.0.0" }
gorbagana-account-info = "2.3.0"
gorbagana-accounts-db = { path = "accounts-db", version = "=3.0.0" }
gorbagana-address-lookup-table-interface = "2.2.2"
gorbagana-atomic-u64 = "2.2.1"
gorbagana-banks-client = { path = "banks-client", version = "=3.0.0" }
gorbagana-banks-interface = { path = "banks-interface", version = "=3.0.0" }
gorbagana-banks-server = { path = "banks-server", version = "=3.0.0" }
gorbagana-bench-tps = { path = "bench-tps", version = "=3.0.0" }
gorbagana-big-mod-exp = "2.2.1"
gorbagana-bincode = "2.2.1"
gorbagana-blake3-hasher = "2.2.1"
gorbagana-bloom = { path = "bloom", version = "=3.0.0" }
gorbagana-bn254 = "2.2.2"
gorbagana-borsh = "2.2.1"
gorbagana-bpf-loader-program = { path = "programs/bpf_loader", version = "=3.0.0" }
gorbagana-bucket-map = { path = "bucket_map", version = "=3.0.0" }
gorbagana-builtins = { path = "builtins", version = "=3.0.0" }
gorbagana-builtins-default-costs = { path = "builtins-default-costs", version = "=3.0.0" }
gorbagana-clap-utils = { path = "clap-utils", version = "=3.0.0" }
gorbagana-clap-v3-utils = { path = "clap-v3-utils", version = "=3.0.0" }
gorbagana-cli = { path = "cli", version = "=3.0.0" }
gorbagana-cli-config = { path = "cli-config", version = "=3.0.0" }
gorbagana-cli-output = { path = "cli-output", version = "=3.0.0" }
gorbagana-client = { path = "client", version = "=3.0.0" }
gorbagana-client-traits = "2.2.1"
gorbagana-clock = "2.2.2"
gorbagana-cluster-type = "2.2.1"
gorbagana-commitment-config = "2.2.1"
gorbagana-compute-budget = { path = "compute-budget", version = "=3.0.0" }
gorbagana-compute-budget-instruction = { path = "compute-budget-instruction", version = "=3.0.0" }
gorbagana-compute-budget-interface = "2.2.2"
gorbagana-compute-budget-program = { path = "programs/compute-budget", version = "=3.0.0" }
gorbagana-config-interface = "1.0.0"
gorbagana-config-program-client = "1.1.0"
gorbagana-connection-cache = { path = "connection-cache", version = "=3.0.0", default-features = false }
gorbagana-core = { path = "core", version = "=3.0.0" }
gorbagana-cost-model = { path = "cost-model", version = "=3.0.0" }
gorbagana-cpi = "2.2.1"
gorbagana-curve25519 = { path = "curves/curve25519", version = "=3.0.0" }
gorbagana-define-syscall = "2.3.0"
gorbagana-derivation-path = "2.2.1"
gorbagana-download-utils = { path = "download-utils", version = "=3.0.0" }
gorbagana-ed25519-program = "2.2.3"
gorbagana-entry = { path = "entry", version = "=3.0.0" }
gorbagana-epoch-info = "2.2.1"
gorbagana-epoch-rewards = "2.2.1"
gorbagana-epoch-rewards-hasher = "2.2.1"
gorbagana-epoch-schedule = "2.2.1"
gorbagana-example-mocks = "2.2.1"
gorbagana-faucet = { path = "faucet", version = "=3.0.0" }
gorbagana-feature-gate-client = "0.0.2"
gorbagana-feature-gate-interface = "2.2.2"
gorbagana-fee = { path = "fee", version = "=3.0.0" }
gorbagana-fee-calculator = "2.2.1"
gorbagana-fee-structure = "2.3.0"
gorbagana-file-download = "2.2.2"
gorbagana-frozen-abi = "2.3.0"
gorbagana-frozen-abi-macro = "2.2.1"
gorbagana-genesis = { path = "genesis", version = "=3.0.0" }
gorbagana-genesis-config = "2.3.0"
gorbagana-genesis-utils = { path = "genesis-utils", version = "=3.0.0" }
gorbagana-geyser-plugin-manager = { path = "geyser-plugin-manager", version = "=3.0.0" }
gorbagana-gossip = { path = "gossip", version = "=3.0.0" }
gorbagana-hard-forks = "2.2.1"
gorbagana-hash = "2.3.0"
gorbagana-inflation = "2.2.1"
gorbagana-instruction = "2.3.0"
gorbagana-instructions-sysvar = "2.2.2"
gorbagana-keccak-hasher = "2.2.1"
gorbagana-keypair = "2.2.1"
gorbagana-last-restart-slot = "2.2.1"
gorbagana-lattice-hash = { path = "lattice-hash", version = "=3.0.0" }
gorbagana-ledger = { path = "ledger", version = "=3.0.0" }
gorbagana-loader-v2-interface = "2.2.1"
gorbagana-loader-v3-interface = "5.0.0"
gorbagana-loader-v4-interface = "2.2.1"
gorbagana-loader-v4-program = { path = "programs/loader-v4", version = "=3.0.0" }
gorbagana-local-cluster = { path = "local-cluster", version = "=3.0.0" }
gorbagana-log-collector = { path = "log-collector", version = "=3.0.0" }
gorbagana-logger = "2.3.1"
gorbagana-measure = { path = "measure", version = "=3.0.0" }
gorbagana-merkle-tree = { path = "merkle-tree", version = "=3.0.0" }
gorbagana-message = "2.4.0"
gorbagana-metrics = { path = "metrics", version = "=3.0.0" }
gorbagana-msg = "2.2.1"
gorbagana-native-token = "2.2.2"
gorbagana-net-utils = { path = "net-utils", version = "=3.0.0" }
gorbagana-nohash-hasher = "0.2.1"
gorbagana-nonce = "2.2.1"
gorbagana-nonce-account = "2.2.1"
gorbagana-notifier = { path = "notifier", version = "=3.0.0" }
gorbagana-offchain-message = "2.2.1"
gorbagana-packet = "2.2.1"
gorbagana-perf = { path = "perf", version = "=3.0.0" }
gorbagana-poh = { path = "poh", version = "=3.0.0" }
gorbagana-poh-config = "2.2.1"
gorbagana-poseidon = { path = "poseidon", version = "=3.0.0" }
gorbagana-precompile-error = "2.2.2"
gorbagana-presigner = "2.2.1"
gorbagana-program = { version = "2.3.0", default-features = false }
gorbagana-program-entrypoint = "2.3.0"
gorbagana-program-error = "2.2.2"
gorbagana-program-memory = "2.3.1"
gorbagana-program-option = "2.2.1"
gorbagana-program-pack = "2.2.1"
gorbagana-program-runtime = { path = "program-runtime", version = "=3.0.0" }
gorbagana-program-test = { path = "program-test", version = "=3.0.0" }
gorbagana-pubkey = { version = "2.4.0", default-features = false }
gorbagana-pubsub-client = { path = "pubsub-client", version = "=3.0.0" }
gorbagana-quic-client = { path = "quic-client", version = "=3.0.0" }
gorbagana-quic-definitions = "2.2.1"
gorbagana-rayon-threadlimit = { path = "rayon-threadlimit", version = "=3.0.0" }
gorbagana-remote-wallet = { path = "remote-wallet", version = "=3.0.0", default-features = false }
gorbagana-rent = "2.2.1"
gorbagana-rent-collector = "2.2.1"
gorbagana-rent-debits = "2.2.1"
gorbagana-reward-info = "2.2.1"
gorbagana-rpc = { path = "rpc", version = "=3.0.0" }
gorbagana-rpc-client = { path = "rpc-client", version = "=3.0.0", default-features = false }
gorbagana-rpc-client-api = { path = "rpc-client-api", version = "=3.0.0" }
gorbagana-rpc-client-nonce-utils = { path = "rpc-client-nonce-utils", version = "=3.0.0" }
gorbagana-rpc-client-types = { path = "rpc-client-types", version = "=3.0.0" }
gorbagana-runtime = { path = "runtime", version = "=3.0.0" }
gorbagana-runtime-transaction = { path = "runtime-transaction", version = "=3.0.0" }
gorbagana-sanitize = "2.2.1"
gorbagana-sbpf = "=0.11.1"
gorbagana-sdk-ids = "2.2.1"
gorbagana-secp256k1-program = "2.2.3"
gorbagana-secp256k1-recover = "2.2.1"
gorbagana-secp256r1-program = "2.2.4"
gorbagana-seed-derivable = "2.2.1"
gorbagana-seed-phrase = "2.2.1"
gorbagana-send-transaction-service = { path = "send-transaction-service", version = "=3.0.0" }
gorbagana-serde = "2.2.1"
gorbagana-serde-varint = "2.2.2"
gorbagana-serialize-utils = "2.2.1"
gorbagana-sha256-hasher = "2.2.1"
gorbagana-short-vec = "2.2.1"
gorbagana-shred-version = "2.2.1"
gorbagana-signature = { version = "2.3.0", default-features = false }
gorbagana-signer = "2.2.1"
gorbagana-slot-hashes = "2.2.1"
gorbagana-slot-history = "2.2.1"
gorbagana-stable-layout = "2.2.1"
gorbagana-stake-interface = { version = "1.2.1" }
gorbagana-stake-program = { path = "programs/stake", version = "=3.0.0" }
gorbagana-storage-bigtable = { path = "storage-bigtable", version = "=3.0.0" }
gorbagana-storage-proto = { path = "storage-proto", version = "=3.0.0" }
gorbagana-streamer = { path = "streamer", version = "=3.0.0" }
gorbagana-svm = { path = "svm", version = "=3.0.0" }
gorbagana-svm-callback = { path = "svm-callback", version = "=3.0.0" }
gorbagana-svm-conformance = { path = "svm-conformance", version = "=3.0.0" }
gorbagana-svm-feature-set = { path = "svm-feature-set", version = "=3.0.0" }
gorbagana-svm-rent-collector = { path = "svm-rent-collector", version = "=3.0.0" }
gorbagana-svm-transaction = { path = "svm-transaction", version = "=3.0.0" }
gorbagana-system-interface = "1.0"
gorbagana-system-program = { path = "programs/system", version = "=3.0.0" }
gorbagana-system-transaction = "2.2.1"
gorbagana-sysvar = "2.2.2"
gorbagana-sysvar-id = "2.2.1"
gorbagana-test-validator = { path = "test-validator", version = "=3.0.0" }
gorbagana-thin-client = { path = "thin-client", version = "=3.0.0" }
gorbagana-time-utils = "2.2.1"
gorbagana-timings = { path = "timings", version = "=3.0.0" }
gorbagana-tls-utils = { path = "tls-utils", version = "=3.0.0" }
gorbagana-tps-client = { path = "tps-client", version = "=3.0.0" }
gorbagana-tpu-client = { path = "tpu-client", version = "=3.0.0", default-features = false }
gorbagana-tpu-client-next = { path = "tpu-client-next", version = "=3.0.0" }
gorbagana-transaction = "2.2.3"
gorbagana-transaction-context = { path = "transaction-context", version = "=3.0.0", features = ["bincode", "debug-signature"] }
gorbagana-transaction-error = "2.2.1"
gorbagana-transaction-metrics-tracker = { path = "transaction-metrics-tracker", version = "=3.0.0" }
gorbagana-transaction-status = { path = "transaction-status", version = "=3.0.0" }
gorbagana-transaction-status-client-types = { path = "transaction-status-client-types", version = "=3.0.0" }
gorbagana-turbine = { path = "turbine", version = "=3.0.0" }
gorbagana-type-overrides = { path = "type-overrides", version = "=3.0.0" }
gorbagana-udp-client = { path = "udp-client", version = "=3.0.0" }
gorbagana-unified-scheduler-logic = { path = "unified-scheduler-logic", version = "=3.0.0" }
gorbagana-unified-scheduler-pool = { path = "unified-scheduler-pool", version = "=3.0.0" }
gorbagana-validator-exit = "2.2.1"
gorbagana-version = { path = "version", version = "=3.0.0" }
gorbagana-vote = { path = "vote", version = "=3.0.0" }
gorbagana-vote-interface = "2.2.5"
gorbagana-vote-program = { path = "programs/vote", version = "=3.0.0", default-features = false }
gorbagana-wen-restart = { path = "wen-restart", version = "=3.0.0" }
gorbagana-zk-elgamal-proof-program = { path = "programs/zk-elgamal-proof", version = "=3.0.0" }
gorbagana-zk-keygen = { path = "zk-keygen", version = "=3.0.0" }
gorbagana-zk-sdk = { path = "zk-sdk", version = "=3.0.0" }
gorbagana-zk-token-proof-program = { path = "programs/zk-token-proof", version = "=3.0.0" }
gorbagana-zk-token-sdk = { path = "zk-token-sdk", version = "=3.0.0" }
spl-associated-token-account = "7.0.0"
spl-generic-token = "1.0.1"
spl-instruction-padding = "0.3.0"
spl-memo = "6.0.0"
spl-pod = "0.5.1"
spl-token = "8.0.0"
spl-token-2022 = "8.0.1"
spl-token-confidential-transfer-proof-extraction = "0.3.0"
spl-token-group-interface = "0.6.0"
spl-token-metadata-interface = "0.7.0"
static_assertions = "1.1.0"
stream-cancel = "0.8.2"
strum = "0.24"
strum_macros = "0.24"
subtle = "2.6.1"
symlink = "0.1.0"
syn = "2.0"
sys-info = "0.9.1"
sysctl = "0.4.6"
systemstat = "0.2.4"
tar = "0.4.44"
tarpc = "0.29.0"
tempfile = "3.20.0"
test-case = "3.3.1"
thiserror = "2.0.12"
thread-priority = "1.2.0"
tiny-bip39 = "0.8.2"
tokio = "1.45.1"
tokio-serde = "0.8"
tokio-stream = "0.1.17"
tokio-tungstenite = "0.20.1"
tokio-util = "0.7.15"
toml = "0.8.12"
tonic = "0.9.2"
tonic-build = "0.9.2"
tower = "0.5.2"
trait-set = "0.3.0"
trees = "0.4.2"
tungstenite = "0.20.1"
unwrap_none = "0.1.2"
uriparse = "0.6.4"
url = "2.5.4"
vec_extract_if_polyfill = "0.1.0"
wasm-bindgen = "0.2"
winapi = "0.3.8"
winreg = "0.50"
x509-parser = "0.14.0"
zeroize = { version = "1.7", default-features = false }
zstd = "0.13.3"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
split-debuginfo = "off"

[profile.release]
split-debuginfo = "unpacked"
lto = "thin"

[profile.release-with-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

# curve25519-dalek uses the simd backend by default in v4 if possible,
# which has very slow performance on some platforms with opt-level 0,
# which is the default for dev and test builds.
# This slowdown causes certain interactions in the gorbagana-test-validator,
# such as verifying ZK proofs in transactions, to take much more than 400ms,
# creating problems in the testing environment.
# To enable better performance in gorbagana-test-validator during tests and dev builds,
# we override the opt-level to 3 for the crate.
[profile.dev.package.curve25519-dalek]
opt-level = 3

[patch.crates-io]
# for details, see https://github.com/anza-xyz/crossbeam/commit/fd279d707025f0e60951e429bf778b4813d1b6bf
crossbeam-epoch = { git = "https://github.com/anza-xyz/crossbeam", rev = "fd279d707025f0e60951e429bf778b4813d1b6bf" }

# We include the following crates as our dependencies above from crates.io:
#
#  * spl-associated-token-account
#  * spl-instruction-padding
#  * spl-memo
#  * spl-pod
#  * spl-token
#  * spl-token-2022
#  * spl-token-metadata-interface
#
# They, in turn, depend on a number of crates that we also include directly
# using `path` specifications.  For example, `spl-token` depends on
# `gorbagana-program`.  And we explicitly specify `gorbagana-program` above as a local
# path dependency:
#
#     gorbagana-program = { path = "../../sdk/program", version = "=1.16.0" }
#
# Unfortunately, Cargo will try to resolve the `spl-token` `gorbagana-program`
# dependency only using what is available on crates.io.  Crates.io normally
# contains a previous version of these crates, and we end up with two versions
# of `gorbagana-program` and `gorbagana-zk-token-sdk` and all of their dependencies in
# our build tree.
#
# If you are developing downstream using non-crates-io gorbagana-program (local or
# forked repo, or from github rev, eg), duplicate the following patch statements
# in your Cargo.toml. If you still hit duplicate-type errors with the patch
# statements in place, run `cargo update -p gorbagana-program` and/or `cargo update
# -p gorbagana-zk-token-sdk` to remove extraneous versions from your Cargo.lock
# file.
#
# There is a similar override in `programs/sbf/Cargo.toml`.  Please keep both
# comments and the overrides in sync.
gorbagana-curve25519 = { path = "curves/curve25519" }
gorbagana-zk-sdk = { path = "zk-sdk" }
