[package]
name = "gorbagana-account-decoder"
description = "Gorbagana account decoder"
documentation = "https://docs.rs/gorbagana-account-decoder"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
Inflector = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
bv = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
gorbagana-account = { workspace = true }
gorbagana-account-decoder-client-types = { workspace = true, features = ["zstd"] }
gorbagana-address-lookup-table-interface = { workspace = true, features = [
    "bincode",
    "bytemuck",
] }
gorbagana-clock = { workspace = true }
gorbagana-config-program-client = { workspace = true, features = ["serde"] }
gorbagana-epoch-schedule = { workspace = true }
gorbagana-fee-calculator = { workspace = true }
gorbagana-instruction = { workspace = true }
gorbagana-loader-v3-interface = { workspace = true, features = ["serde"] }
gorbagana-nonce = { workspace = true, features = ["serde"] }
gorbagana-program-option = { workspace = true }
gorbagana-program-pack = { workspace = true }
gorbagana-pubkey = { workspace = true }
gorbagana-rent = { workspace = true }
gorbagana-sdk-ids = { workspace = true }
gorbagana-slot-hashes = { workspace = true }
gorbagana-slot-history = { workspace = true }
gorbagana-stake-interface = { workspace = true }
gorbagana-sysvar = { workspace = true }
gorbagana-vote-interface = { workspace = true, features = ["bincode"] }
spl-generic-token = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
spl-token-group-interface = { workspace = true }
spl-token-metadata-interface = { workspace = true }
thiserror = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
gorbagana-account = { workspace = true, features = ["bincode"] }
gorbagana-hash = { workspace = true }
gorbagana-pubkey = { workspace = true, features = ["rand"] }
spl-pod = { workspace = true }

[lints]
workspace = true
