[package]
name = "gorbagana-accounts-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
dev-context-only-utils = []

[dependencies]
clap = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
gorbagana-accounts-db = { workspace = true, features = ["dev-context-only-utils"] }
gorbagana-clock = { workspace = true }
gorbagana-epoch-schedule = { workspace = true }
gorbagana-logger = { workspace = true }
gorbagana-measure = { workspace = true }
gorbagana-pubkey = { workspace = true }
gorbagana-rent-collector = { workspace = true }
gorbagana-version = { workspace = true }
