[package]
name = "gorbagana-accounts-cluster-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
gorbagana-account-decoder = { workspace = true }
gorbagana-clap-utils = { workspace = true }
gorbagana-cli-config = { workspace = true }
gorbagana-client = { workspace = true }
gorbagana-clock = { workspace = true }
gorbagana-commitment-config = { workspace = true }
gorbagana-gossip = { workspace = true }
gorbagana-hash = { workspace = true }
gorbagana-instruction = { workspace = true }
gorbagana-keypair = { workspace = true }
gorbagana-logger = { workspace = true }
gorbagana-measure = { workspace = true }
gorbagana-message = { workspace = true, features = ["serde", "bincode", "blake3"] }
gorbagana-net-utils = { workspace = true }
gorbagana-program-pack = { workspace = true }
gorbagana-pubkey = { workspace = true }
gorbagana-rpc-client = { workspace = true, features = ["default"] }
gorbagana-rpc-client-api = { workspace = true }
gorbagana-signature = { workspace = true }
gorbagana-signer = { workspace = true }
gorbagana-streamer = { workspace = true }
gorbagana-system-interface = { workspace = true, features = ["bincode"] }
gorbagana-transaction = { workspace = true }
gorbagana-transaction-status = { workspace = true }
gorbagana-version = { workspace = true }
spl-generic-token = { workspace = true }
spl-token = { workspace = true, features = ["no-entrypoint"] }

[dev-dependencies]
gorbagana-accounts-db = { workspace = true }
gorbagana-core = { workspace = true, features = ["dev-context-only-utils"] }
gorbagana-faucet = { workspace = true }
gorbagana-local-cluster = { workspace = true }
gorbagana-native-token = { workspace = true }
gorbagana-poh-config = { workspace = true }
gorbagana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
gorbagana-test-validator = { workspace = true }
