[package]
name = "gorbagana-accounts-db"
description = "Gorbagana accounts db"
documentation = "https://docs.rs/gorbagana-accounts-db"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]
name = "gorbagana_accounts_db"

[features]
dev-context-only-utils = [
    "dep:qualifier_attr",
    "dep:gorbagana-keypair",
    "dep:gorbagana-rent",
    "dep:gorbagana-signer",
    "dep:gorbagana-stake-program",
    "dep:gorbagana-vote-program",
    "gorbagana-account/dev-context-only-utils",
    "gorbagana-pubkey/rand",
    "gorbagana-transaction/dev-context-only-utils",
]
frozen-abi = [
    "dep:gorbagana-frozen-abi",
    "dep:gorbagana-frozen-abi-macro",
    "gorbagana-fee-calculator/frozen-abi",
    "gorbagana-vote-program/frozen-abi",
]

[dependencies]
ahash = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
bv = { workspace = true, features = ["serde"] }
bytemuck = { workspace = true }
bytemuck_derive = { workspace = true }
bzip2 = { workspace = true }
crossbeam-channel = { workspace = true }
dashmap = { workspace = true, features = ["rayon", "raw-api"] }
indexmap = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
lz4 = { workspace = true }
memmap2 = { workspace = true }
modular-bitfield = { workspace = true }
num_cpus = { workspace = true }
num_enum = { workspace = true }
qualifier_attr = { workspace = true, optional = true }
rand = { workspace = true }
rayon = { workspace = true }
seqlock = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_derive = { workspace = true }
slab = { workspace = true }
smallvec = { workspace = true, features = ["const_generics"] }
gorbagana-account = { workspace = true, features = ["serde"] }
gorbagana-address-lookup-table-interface = { workspace = true, features = [
    "bincode",
    "bytemuck",
] }
gorbagana-bucket-map = { workspace = true }
gorbagana-clock = { workspace = true }
gorbagana-epoch-schedule = { workspace = true }
gorbagana-fee-calculator = { workspace = true }
gorbagana-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
gorbagana-frozen-abi-macro = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
gorbagana-genesis-config = { workspace = true, features = ["serde"] }
gorbagana-hash = { workspace = true, features = ["serde"] }
gorbagana-keypair = { workspace = true, optional = true }
gorbagana-lattice-hash = { workspace = true }
gorbagana-measure = { workspace = true }
gorbagana-message = { workspace = true }
gorbagana-metrics = { workspace = true }
gorbagana-nohash-hasher = { workspace = true }
gorbagana-pubkey = { workspace = true }
gorbagana-rayon-threadlimit = { workspace = true }
gorbagana-rent = { workspace = true, optional = true }
gorbagana-rent-collector = { workspace = true }
gorbagana-reward-info = { workspace = true, features = ["serde"] }
gorbagana-sha256-hasher = { workspace = true }
gorbagana-signer = { workspace = true, optional = true }
gorbagana-slot-hashes = { workspace = true }
gorbagana-stake-program = { workspace = true, optional = true }
gorbagana-svm-transaction = { workspace = true }
gorbagana-system-interface = { workspace = true }
gorbagana-sysvar = { workspace = true }
gorbagana-time-utils = { workspace = true }
gorbagana-transaction = { workspace = true }
gorbagana-transaction-context = { workspace = true }
gorbagana-transaction-error = { workspace = true }
gorbagana-vote-program = { workspace = true, optional = true }
spl-generic-token = { workspace = true }
static_assertions = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
agave-io-uring = { workspace = true }
io-uring = { workspace = true }

[dev-dependencies]
agave-reserved-account-keys = { workspace = true }
assert_matches = { workspace = true }
criterion = { workspace = true }
libsecp256k1 = { workspace = true }
memoffset = { workspace = true }
rand_chacha = { workspace = true }
serde_bytes = { workspace = true }
# See order-crates-for-publishing.py for using this unusual `path = "."`
gorbagana-accounts-db = { path = ".", features = ["dev-context-only-utils"] }
gorbagana-compute-budget = { workspace = true }
gorbagana-instruction = { workspace = true }
gorbagana-logger = { workspace = true }
gorbagana-sdk-ids = { workspace = true }
gorbagana-signature = { workspace = true, features = ["rand"] }
gorbagana-slot-history = { workspace = true }
static_assertions = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
test-case = { workspace = true }

[[bench]]
name = "bench_accounts_file"
harness = false

[[bench]]
name = "bench_hashing"
harness = false

[[bench]]
name = "read_only_accounts_cache"
harness = false

[[bench]]
name = "bench_serde"
harness = false

[[bench]]
name = "bench_lock_accounts"
harness = false

[lints]
workspace = true
