[package]
name = "gorbagana-banking-bench"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
dev-context-only-utils = []

[dependencies]
agave-banking-stage-ingress-types = { workspace = true }
assert_matches = { workspace = true }
clap = { version = "3.1.8", features = ["derive", "cargo"] }
crossbeam-channel = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
gorbagana-client = { workspace = true }
gorbagana-compute-budget-interface = { workspace = true }
gorbagana-core = { workspace = true, features = ["dev-context-only-utils"] }
gorbagana-gossip = { workspace = true }
gorbagana-hash = { workspace = true }
gorbagana-keypair = { workspace = true }
gorbagana-ledger = { workspace = true }
gorbagana-logger = { workspace = true }
gorbagana-measure = { workspace = true }
gorbagana-message = { workspace = true }
gorbagana-perf = { workspace = true }
gorbagana-poh = { workspace = true, features = ["dev-context-only-utils"] }
gorbagana-pubkey = { workspace = true }
gorbagana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
gorbagana-signature = { workspace = true }
gorbagana-signer = { workspace = true }
gorbagana-streamer = { workspace = true }
gorbagana-system-interface = { workspace = true }
gorbagana-system-transaction = { workspace = true }
gorbagana-time-utils = { workspace = true }
gorbagana-tpu-client = { workspace = true }
gorbagana-transaction = { workspace = true }
gorbagana-version = { workspace = true }
