[package]
name = "gorbagana-banks-client"
description = "Gorbagana banks client"
documentation = "https://docs.rs/gorbagana-banks-client"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]
name = "gorbagana_banks_client"

[dependencies]
borsh = { workspace = true }
futures = { workspace = true }
gorbagana-account = { workspace = true, features = ["bincode"] }
gorbagana-banks-interface = { workspace = true }
gorbagana-clock = { workspace = true }
gorbagana-commitment-config = { workspace = true }
gorbagana-hash = { workspace = true }
gorbagana-message = { workspace = true }
gorbagana-program-pack = { workspace = true }
gorbagana-pubkey = { workspace = true }
gorbagana-rent = { workspace = true }
gorbagana-signature = { workspace = true }
gorbagana-sysvar = { workspace = true, features = ["bincode"] }
gorbagana-transaction = { workspace = true }
gorbagana-transaction-context = { workspace = true }
gorbagana-transaction-error = { workspace = true }
tarpc = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-serde = { workspace = true, features = ["bincode"] }

[dev-dependencies]
gorbagana-banks-server = { workspace = true }
gorbagana-pubkey = { workspace = true }
gorbagana-runtime = { workspace = true, features = ["dev-context-only-utils"] }
gorbagana-signer = { workspace = true }
gorbagana-system-interface = { workspace = true }
