[package]
name = "gorbagana-banks-interface"
description = "Gorbagana banks RPC interface"
documentation = "https://docs.rs/gorbagana-banks-interface"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]
name = "gorbagana_banks_interface"

[dependencies]
serde = { workspace = true }
serde_derive = { workspace = true }
gorbagana-account = { workspace = true, features = [ "serde" ] }
gorbagana-clock = { workspace = true }
gorbagana-commitment-config = { workspace = true, features = [ "serde" ] }
gorbagana-hash = { workspace = true }
gorbagana-message = { workspace = true, features = [ "serde" ] }
gorbagana-pubkey = { workspace = true }
gorbagana-signature = { workspace = true, features = [ "serde" ] }
gorbagana-transaction = { workspace = true, features = [ "serde" ] }
gorbagana-transaction-context = { workspace = true, features = [ "serde" ] }
gorbagana-transaction-error = { workspace = true, features = [ "serde" ] }
tarpc = { workspace = true, features = ["full"] }
