[package]
name = "gorbagana-banks-server"
description = "Gorbagana banks server"
documentation = "https://docs.rs/gorbagana-banks-server"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]
name = "gorbagana_banks_server"

[dependencies]
agave-feature-set = { workspace = true }
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
futures = { workspace = true }
gorbagana-account = { workspace = true }
gorbagana-banks-interface = { workspace = true }
gorbagana-client = { workspace = true }
gorbagana-clock = { workspace = true }
gorbagana-commitment-config = { workspace = true }
gorbagana-hash = { workspace = true }
gorbagana-message = { workspace = true }
gorbagana-pubkey = { workspace = true }
gorbagana-runtime = { workspace = true }
gorbagana-runtime-transaction = { workspace = true }
gorbagana-send-transaction-service = { workspace = true }
gorbagana-signature = { workspace = true }
gorbagana-svm = { workspace = true }
gorbagana-transaction = { workspace = true }
gorbagana-transaction-error = { workspace = true }
tarpc = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
tokio-serde = { workspace = true, features = ["bincode"] }
