[package]
name = "gorbagana-bench-streamer"
publish = false
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { version = "3.1.5", features = ["cargo"] }
crossbeam-channel = { workspace = true }
gorbagana-net-utils = { workspace = true }
gorbagana-streamer = { workspace = true }
gorbagana-version = { workspace = true }
